--- a/presentation-framework/src/styles/Presentation.css
+++ b/presentation-framework/src/styles/Presentation.css
@@ -29,20 +29,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 4rem;
+  padding: 0;
 }
 
 .slide {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  left: 0;
+  /* Fixed 1280x720 canvas - scaled via inline transform */
+  position: relative;
+  width: 1280px;
+  height: 720px;
+  transform-origin: center center;
 }
 
 .slide h1 {
