--- a/presentation-framework/src/styles/Presentation.css
+++ b/presentation-framework/src/styles/Presentation.css
@@ -33,10 +33,10 @@
 }
 
 .slide {
-  /* Fixed 1280x720 canvas - scaled via inline transform */
+  /* Dynamic canvas - scaled via inline transform */
   position: relative;
-  width: 1280px;
-  height: 720px;
+  width: var(--slide-width, 1280px);
+  height: var(--slide-height, 720px);
   transform-origin: center center;
 }
 
